# dmapi

./: .gitignore  Makefile  VERSION  aclocal.m4  configure.in  install-sh  release.sh
debian/: Makefile  changelog  control  copyright  rules
doc/: CHANGES  Makefile
include/: Makefile  builddefs.in  buildmacros  buildrules  dmapi.h  dmapi_kern.h
libdm/: Makefile  dm_attr.c  dm_bulkattr.c  dm_config.c  dm_dmattr.c  dm_event.c  dm_handle.c  dm_handle2path.c  dm_hole.c  dm_mountinfo.c  dm_rdwr.c  dm_region.c  dm_right.c  dm_session.c  dmapi_lib.c  dmapi_lib.h  getdents.c
m4/: Makefile  package_utilies.m4
man/: Makefile
man/man3/: Makefile  dmapi.3
