AC_INIT(include/dmapi.h)
AC_PREFIX_DEFAULT(/usr)

AC_ARG_ENABLE(shared,
[ --enable-shared=[yes/no] Enable use of shared libraries [default=yes]],,
	enable_shared=yes)
AC_SUBST(enable_shared)

AC_PACKAGE_GLOBALS(dmapi)
AC_PACKAGE_UTILITIES(dmapi)
AC_PACKAGE_NEED_XFS_HANDLE_H
AC_MANUAL_FORMAT

AC_OUTPUT(include/builddefs)
